added files for api and database

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,53 +1,95 @@
 cmake_minimum_required(VERSION 3.15)  # CMake version check
-project(RecipeManagerExecutable)     # Creates project under this name
+project(RecipeManagerExecutable)     # Project name
 
-set(CMAKE_CXX_STANDARD 20)            # Enable c++20 standard
-set(CMAKE_CXX_STANDARD_REQUIRED ON) #ensures uniform compiler behavior between macos and windows
+# Set C++ standard to C++20
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")   # Enables execptoin handling
-set(SOURCE_DIR "${CMAKE_SOURCE_DIR}/src")  # path handling - windows uses \, mac uses / --> this sets it to /
+# Set source directory
+set(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
+# Include directories for headers
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
+# Locate SQLite3
+find_package(SQLite3 REQUIRED)
+if(SQLite3_FOUND)
+    include_directories(${SQLite3_INCLUDE_DIRS})
+else()
+    message(FATAL_ERROR "SQLite3 not found. Please install SQLite3.")
+endif()
 
-#includes our header&nlohmann_json files  --> lets test, but we can likely remove "../include/json.hpp" and turn to #include "json.hpp" now
-#include_directories(include)
-#include_directories(json/include)
-include_directories(${CMAKE_SOURCE_DIR}/include)
+# Include FetchContent module for external dependencies
+include(FetchContent)
 
-
-
-#includes our src (.cpp) files
-set(SOURCE_FILES
-        src/main.cpp
-        src/Fridge.cpp
-        src/Ingredient.cpp
-        src/Pantry.cpp
-        src/Recipe.cpp
-        src/RecipeManager.cpp
-        src/Storage.cpp)
-
-# Add executable target with source files listed above
-add_executable(RecipeManagerExecutable ${SOURCE_FILES})
-
-#ensures this package is required across all platforms - nlohmann_json
-#add_subdirectory(json)
-#find_package(nlohmann_json REQUIRED)
-#target_link_libraries(RecipeManagerExecutable PRIVATE nlohmann_json::nlohmann_json)
-
-
-# establishes our data files
-set(DATA_FILES
-        ${CMAKE_SOURCE_DIR}/data/history.json
-        ${CMAKE_SOURCE_DIR}/data/recipes.json
-        ${CMAKE_SOURCE_DIR}/data/storage.json
+# Download nlohmann/json library
+FetchContent_Declare(
+    json
+    GIT_REPOSITORY https://github.com/nlohmann/json.git
+    GIT_TAG v3.11.2  # Replace with the latest stable version
 )
-#adds json files to build directory after the executable is built
+
+# Make the library available
+FetchContent_MakeAvailable(json)
+
+# Locate Threads library (needed for JSON or other libraries in multi-threaded mode)
+find_package(Threads REQUIRED)
+
+# Add source files for the main application executable
+set(MAIN_APP_SOURCES
+    ${SOURCE_DIR}/main.cpp
+    ${SOURCE_DIR}/Fridge.cpp
+    ${SOURCE_DIR}/Ingredient.cpp
+    ${SOURCE_DIR}/Pantry.cpp
+    ${SOURCE_DIR}/Recipe.cpp
+    ${SOURCE_DIR}/RecipeManager.cpp
+    ${SOURCE_DIR}/Storage.cpp
+)
+
+# Add source files for the database setup executable
+set(DATABASE_SETUP_SOURCES
+    ${SOURCE_DIR}/build_database.cpp
+)
+
+# Create the main application executable
+add_executable(RecipeManagerExecutable ${MAIN_APP_SOURCES})
+target_link_libraries(RecipeManagerExecutable PRIVATE ${SQLite3_LIBRARIES} nlohmann_json::nlohmann_json Threads::Threads)
+find_package(CURL REQUIRED)
+target_link_libraries(RecipeManagerExecutable PRIVATE CURL::libcurl)
+
+
+# Create the database setup executable
+add_executable(BuildDatabaseExecutable ${DATABASE_SETUP_SOURCES})
+target_link_libraries(BuildDatabaseExecutable PRIVATE ${SQLite3_LIBRARIES} nlohmann_json::nlohmann_json Threads::Threads)
+
+# Establish JSON data files
+set(DATA_FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/data/history.json
+    ${CMAKE_CURRENT_SOURCE_DIR}/data/recipes.json
+    ${CMAKE_CURRENT_SOURCE_DIR}/data/storage.json
+)
+
+# Copy JSON files to the build directory after the main application executable is built
 foreach(file ${DATA_FILES})
     add_custom_command(TARGET RecipeManagerExecutable POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_if_different
-            "${file}" $<TARGET_FILE_DIR:RecipeManagerExecutable>
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "${file}" $<TARGET_FILE_DIR:RecipeManagerExecutable>
     )
 endforeach()
 
-#this should work, but if we encounter issues between platforms, check our CMAKE_SOURCE_DIR and TARGET_FILE_DIR paths
+# Copy JSON files to the build directory for database setup executable
+foreach(file ${DATA_FILES})
+    add_custom_command(TARGET BuildDatabaseExecutable POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "${file}" $<TARGET_FILE_DIR:BuildDatabaseExecutable>
+    )
+endforeach()
+
+# Add include directories to both executables
+target_include_directories(RecipeManagerExecutable PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories(BuildDatabaseExecutable PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+# Optional: Display build settings
+message(STATUS "Build Type: ${CMAKE_BUILD_TYPE}")
+message(STATUS "C++ Standard: ${CMAKE_CXX_STANDARD}")
