--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -117,6 +117,26 @@
     "type_traits": "cpp",
     "utility": "cpp",
     "format": "cpp",
-    "system_error": "cpp"
+    "system_error": "cpp",
+    "iostream": "cpp",
+    "fstream": "cpp",
+    "__tree": "cpp",
+    "any": "cpp",
+    "complex": "cpp",
+    "csignal": "cpp",
+    "cstdarg": "cpp",
+    "deque": "cpp",
+    "forward_list": "cpp",
+    "iomanip": "cpp",
+    "istream": "cpp",
+    "list": "cpp",
+    "map": "cpp",
+    "regex": "cpp",
+    "set": "cpp",
+    "span": "cpp",
+    "sstream": "cpp",
+    "stack": "cpp",
+    "unordered_set": "cpp",
+    "valarray": "cpp"
   }
 }
